a1/brendan_gordon/TEST_PROGRAMS/invalidtype/scott_cooper/invalid_ifstmt.min
var x : float;
x = 1.0;

if x then
    print "This should never have been allowed";
endif

